deployment/digital-ocean/https/templates/ingress.template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: human-connection
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-body-size: 6m
spec:
  tls:
    - hosts:
        # - nitro-mailserver.human-connection.org
        - develop.human-connection.org
      secretName: tls
  rules:
    - host: develop.human-connection.org
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 3000
  - host: mailserver.human-connection.org
    http:
      paths:
      - path: /
        backend:
          serviceName: mailserver
          servicePort: 80
